update: - fix bug chạy lỗi ( đã ok) - thêm socket client test